fix; background contrast ratio for h5 elements

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -166,7 +166,7 @@ border-bottom-right-radius: 7px;
     padding-top: 31px;
     text-align: left;
     font-size: 10px;
-    opacity: 0.4;   
+   /* opacity: 0.4;  */ 
 padding-bottom: 13px;
   }
   .card__divider__title {
